# AirBit_OFDM

./: CMakeLists.txt  README.md  build_liio.sh  check_libiio.sh  config.h  del_lib.sh  del_libiio_v0.x.sh  del_libiio_v1.0.sh  log.txt  matplotlibcpp.h
File_converter/: file_converter.cpp
OFDM/: ofdm_demod.cpp  ofdm_demod.h  ofdm_mod.cpp
OFDM/fft/: fft.cpp
ad9361/: ad9361.cpp  ad9361.hpp
other/: plots.cpp  plots.h  plots_sub.cpp
soapy/: soapy2.cpp  soapy2.h  soapy_copy.cpp  soapy_dev.cpp  soapy_dev.h  soapy_drawplot.cpp  soapy_rx.cpp  soapy_trx.h  soapy_tx copy.cpp  soapy_tx.cpp
src/correlation/: time_corr.cpp  time_corr.hpp
src/process_buffer/: processor.cpp  processor.h
src/test/: main  make_libiio.sh  plot_run.sh  plot_tets.cpp  run.sh  rx.cpp  rx2.cpp  tes.cpp  trx_run.sh  trx_soapy.cpp  tx.cpp  tx2.cpp  tx2_plot.cpp
test/ofdm_corr/: test
test/rx_files_lte/: test.py
test/test_channel/: qpsk.txt  test
